add the swagger documenation for shw method
